[package]
name = "axess_core"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
broadcaster = "1.0"
futures = "0.3"
log = "0.4"
tokio = {version = "0.2", features = ["time", "stream"] }

fractal_protocol = { path = "../fractal_protocol/" }

midir = "0.6"
quick-error = "2.0"
serde = "1.0"

serialport = "3.3"

packed_struct = "0.4.0"

[target.'cfg(windows)'.dependencies]
wmi = "0.5"

[dev-dependencies]
tokio-test="*"
log4rs = "0.13"