[package]
name = "fractal_backend"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bus = "2.2.3"
broadcaster="1.0"
futures = "0.3.5"

fractal_core = { path = "../fractal_core/" }