[package]
name = "fractal_backend"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
broadcaster = "1.0"
futures = "0.3"
log = "0.4"
tokio = {version = "0.2", features = ["time"] }

fractal_protocol = { path = "../fractal_protocol/" }

midir = "0.6"
quick-error = "2.0"