[package]
name = "fractal_core"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.6.2"
bus = "2.2.3"
quick-error = "2.0.0"
fractal_protocol = { path = "../fractal_protocol/" }