[package]
name = "fractal_gui"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fractal_protocol = { path = "../fractal_protocol/" }
fractal_core = { path = "../fractal_core/" }