[package]
name = "fractal_gui"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fractal_protocol = { path = "../fractal_protocol/" }
fractal_backend = { path = "../fractal_backend/" }

native-windows-gui = "1.0"
native-windows-derive = "1.0"

#bus = "2.2.3"
broadcaster="1.0"
futures = "0.3"
log = "0.4"
log4rs = "0.13"